# Agentic-AI-Brand-Journalist

./: .env.example  README.md  pyproject.toml
autonomous_journalist/: agent.py  orchestrator.py
autonomous_journalist/sub_agent/publisher_agent/: __init__.py  agent.py  publishing_tools.py
autonomous_journalist/sub_agent/scout_agent/: __init__.py  agent.py
autonomous_journalist/sub_agent/writer_agent/: __init__.py  agent.py  writing_tools.py
